[gd_scene load_steps=6 format=3 uid="uid://c2i25e4v5wfoy"]

[ext_resource type="Script" path="res://menus/user_profile.gd" id="1_0xmrg"]
[ext_resource type="Theme" uid="uid://birea8mlkoq0q" path="res://UI/themes/default_theme.tres" id="2_p8ebw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vtm5"]
bg_color = Color(0.360784, 0.623529, 0.419608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 20.0
expand_margin_top = 15.0
expand_margin_right = 20.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfuin"]
bg_color = Color(0.121569, 0.513726, 0.243137, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 20.0
expand_margin_top = 15.0
expand_margin_right = 20.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ymci"]
bg_color = Color(0.121569, 0.513726, 0.243137, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.121569, 0.513726, 0.243137, 1)
expand_margin_left = 20.0
expand_margin_top = 15.0
expand_margin_right = 20.0
expand_margin_bottom = 15.0

[node name="UserProfile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xmrg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_p8ebw")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayerAvatar" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 4

[node name="SnakeNameTitle" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Your Snake is"
horizontal_alignment = 1

[node name="SnakeNameLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="TotalScoreTitle" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Your Total Score:"
horizontal_alignment = 1

[node name="TotalScoreLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Back to Game"

[node name="EditButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2vtm5")
theme_override_styles/hover = SubResource("StyleBoxFlat_lfuin")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ymci")
text = "Edit Profile"

[node name="LogoutButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_colors/font_hover_color = Color(0.941176, 0.941176, 0.941176, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2vtm5")
theme_override_styles/hover = SubResource("StyleBoxFlat_lfuin")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ymci")
text = "Logout"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
